Bug 319115. Move nsTextFrame interfaces around so nsTextFrame.h can go away. Preparation for forking nsTextFrame. patch by Stephen Blackheath, r+sr=roc