layout/base/nsLayoutUtils.cpp
@@ -538,3 +538,62 @@ nsLayoutUtils::IsInitialContainingBlock(nsIFrame* aFrame)
   return aFrame ==
     aFrame->GetPresContext()->PresShell()->FrameConstructor()->GetInitialContainingBlock();
 }
+
+/**
+ * Uses a binary search for find where the cursor falls in the line of text
+ * It also keeps track of the part of the string that has already been measured
+ * so it doesn't have to keep measuring the same text over and over
+ *
+ * @param "aBaseWidth" contains the width in twips of the portion 
+ * of the text that has already been measured, and aBaseInx contains
+ * the index of the text that has already been measured.
+ *
+ * @param aTextWidth returns the (in twips) the length of the text that falls
+ * before the cursor aIndex contains the index of the text where the cursor falls
+ */
+PRBool
+nsLayoutUtils::BinarySearchForPosition(nsIRenderingContext* aRendContext, 
+                        const PRUnichar* aText,
+                        PRInt32    aBaseWidth,
+                        PRInt32    aBaseInx,
+                        PRInt32    aStartInx, 
+                        PRInt32    aEndInx, 
+                        PRInt32    aCursorPos, 
+                        PRInt32&   aIndex,
+                        PRInt32&   aTextWidth)
+{
+  PRInt32 range = aEndInx - aStartInx;
+  if ((range == 1) || (range == 2 && IS_HIGH_SURROGATE(aText[aStartInx]))) {
+    aIndex   = aStartInx + aBaseInx;
+    aRendContext->GetWidth(aText, aIndex, aTextWidth);
+    return PR_TRUE;
+  }
+
+  PRInt32 inx = aStartInx + (range / 2);
+
+  // Make sure we don't leave a dangling low surrogate
+  if (IS_HIGH_SURROGATE(aText[inx-1]))
+    inx++;
+
+  PRInt32 textWidth = 0;
+  aRendContext->GetWidth(aText, inx, textWidth);
+
+  PRInt32 fullWidth = aBaseWidth + textWidth;
+  if (fullWidth == aCursorPos) {
+    aTextWidth = textWidth;
+    aIndex = inx;
+    return PR_TRUE;
+  } else if (aCursorPos < fullWidth) {
+    aTextWidth = aBaseWidth;
+    if (BinarySearchForPosition(aRendContext, aText, aBaseWidth, aBaseInx, aStartInx, inx, aCursorPos, aIndex, aTextWidth)) {
+      return PR_TRUE;
+    }
+  } else {
+    aTextWidth = fullWidth;
+    if (BinarySearchForPosition(aRendContext, aText, aBaseWidth, aBaseInx, inx, aEndInx, aCursorPos, aIndex, aTextWidth)) {
+      return PR_TRUE;
+    }
+  }
+  return PR_FALSE;
+}
+
