layout/generic/nsIFrame.h
@@ -1457,6 +1457,12 @@ NS_PTR_TO_INT32(frame->GetProperty(nsLayoutAtoms::embeddingLevel))
   NS_IMETHOD ChildrenMustHaveWidgets(PRBool& aMust) const=0;
   NS_IMETHOD GetIndexOf(nsIBox* aChild, PRInt32* aIndex)=0;
 
+  /**
+   * @return PR_TRUE if this text frame ends with a newline character.  It
+   * should return PR_FALSE if this is not a text frame.
+   */
+  virtual PRBool HasTerminalNewline() const;
+
   static PRBool AddCSSPrefSize(nsBoxLayoutState& aState, nsIBox* aBox, nsSize& aSize);
   static PRBool AddCSSMinSize(nsBoxLayoutState& aState, nsIBox* aBox, nsSize& aSize);
   static PRBool AddCSSMaxSize(nsBoxLayoutState& aState, nsIBox* aBox, nsSize& aSize);
